# sqlx-crud

./: Cargo.toml  README.md
examples/axum/: Cargo.toml
examples/serenity/: Cargo.toml
sqlx-crud-macros/src/: lib.rs
src/: traits.rs
