[workspace]
members = [
  ".",
  "sqlx-crud-macros",
  "examples/axum",
  "examples/serenity",
]

[package]
name = "sqlx-crud"
version = "0.5.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/treydempsey/sqlx-crud"
documentation = "https://docs.rs/sqlx-crud"
description = "Derive macro for SQLx to implement Create, Read, Update, and Delete (CRUD) methods for you."
license = "MIT"
keywords = ["sqlx", "orm", "crud", "database"]
categories = ["database", "asynchronous", "web-programming"]
authors = ["Trey Dempsey <trey.dempsey@gmail.com>"]

[features]
default = ["runtime-tokio"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std = ["sqlx/runtime-async-std"]
tls-native-tls = ["sqlx/tls-native-tls"]
tls-rustls = ["sqlx/tls-rustls"]

[dependencies]
futures = "0.3"
sqlx = { version = "0.8.6" }
sqlx-crud-macros = { version = "0.4", path = "sqlx-crud-macros" }
thiserror = "2"

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio-test = "0.4.4"
