[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
axum = "0.8.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.8.4", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
sqlx-crud = { path = "../..", features = ["runtime-tokio"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
