[package]
name = "issue-9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"]}
serenity = "0.12.4"
sqlx = { version = "*", features = ["runtime-tokio", "sqlite"] }
sqlx-crud = { path = "../..", features = ["runtime-tokio"] }
